// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="huge-spacer-bottom"
>
  <h1
    className="hotspot-list-header bordered-bottom"
  >
    <SecurityHotspotIcon
      className="spacer-right"
    />
    hotspots.list_title.TO_REVIEW.0
  </h1>
  <ul
    className="big-spacer-bottom big-spacer-top"
  />
  <ListFooter
    count={0}
    loadMore={[MockFunction]}
    loading={false}
    total={0}
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="huge-spacer-bottom"
>
  <h1
    className="hotspot-list-header bordered-bottom"
  >
    <SecurityHotspotIcon
      className="spacer-right"
    />
    hotspots.list_title.TO_REVIEW.0
  </h1>
  <ul
    className="big-spacer-bottom big-spacer-top"
  />
  <ListFooter
    count={0}
    loading={true}
    total={0}
  />
</div>
`;

exports[`should render correctly when the list of hotspot is static 1`] = `
<div
  className="huge-spacer-bottom"
>
  <h1
    className="hotspot-list-header bordered-bottom"
  >
    <SecurityHotspotIcon
      className="spacer-right"
    />
    hotspots.list_title.0
  </h1>
  <ul
    className="big-spacer-bottom big-spacer-top"
  />
  <ListFooter
    count={0}
    loadMore={[MockFunction]}
    loading={false}
    total={0}
  />
</div>
`;

exports[`should render correctly with hotspots: no pagination 1`] = `
<div
  className="huge-spacer-bottom"
>
  <h1
    className="hotspot-list-header bordered-bottom"
  >
    <SecurityHotspotIcon
      className="spacer-right"
    />
    hotspots.list_title.TO_REVIEW.5
  </h1>
  <ul
    className="big-spacer-bottom big-spacer-top"
  >
    <li
      className="big-spacer-bottom"
      key="HIGH"
    >
      <div
        className="hotspot-risk-header little-spacer-left spacer-top spacer-bottom"
      >
        <span>
          hotspots.risk_exposure
          :
        </span>
        <div
          className="hotspot-risk-badge spacer-left HIGH"
        >
          risk_exposure.HIGH
        </div>
      </div>
      <ul>
        <li
          className="spacer-bottom"
          key="cat1"
        >
          <HotspotCategory
            categoryKey="cat1"
            hotspots={
              [
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h2",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat1",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "HIGH",
                },
              ]
            }
            isLastAndIncomplete={false}
            onHotspotClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            onToggleExpand={[Function]}
            selectedHotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            title="cat1"
          />
        </li>
        <li
          className="spacer-bottom"
          key="cat2"
        >
          <HotspotCategory
            categoryKey="cat2"
            hotspots={
              [
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h1",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat2",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "HIGH",
                },
              ]
            }
            isLastAndIncomplete={false}
            onHotspotClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            onToggleExpand={[Function]}
            selectedHotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            title="cat2"
          />
        </li>
      </ul>
    </li>
    <li
      className="big-spacer-bottom"
      key="MEDIUM"
    >
      <div
        className="hotspot-risk-header little-spacer-left spacer-top spacer-bottom"
      >
        <span>
          hotspots.risk_exposure
          :
        </span>
        <div
          className="hotspot-risk-badge spacer-left MEDIUM"
        >
          risk_exposure.MEDIUM
        </div>
      </div>
      <ul>
        <li
          className="spacer-bottom"
          key="cat1"
        >
          <HotspotCategory
            categoryKey="cat1"
            hotspots={
              [
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h3",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat1",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "MEDIUM",
                },
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h4",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat1",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "MEDIUM",
                },
              ]
            }
            isLastAndIncomplete={false}
            onHotspotClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            onToggleExpand={[Function]}
            selectedHotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            title="cat1"
          />
        </li>
        <li
          className="spacer-bottom"
          key="cat2"
        >
          <HotspotCategory
            categoryKey="cat2"
            hotspots={
              [
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h5",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat2",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "MEDIUM",
                },
              ]
            }
            isLastAndIncomplete={false}
            onHotspotClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            onToggleExpand={[Function]}
            selectedHotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            title="cat2"
          />
        </li>
      </ul>
    </li>
  </ul>
  <ListFooter
    count={5}
    loadMore={[MockFunction]}
    loading={false}
    total={5}
  />
</div>
`;

exports[`should render correctly with hotspots: pagination 1`] = `
<div
  className="huge-spacer-bottom"
>
  <h1
    className="hotspot-list-header bordered-bottom"
  >
    <SecurityHotspotIcon
      className="spacer-right"
    />
    hotspots.list_title.TO_REVIEW.7
  </h1>
  <ul
    className="big-spacer-bottom big-spacer-top"
  >
    <li
      className="big-spacer-bottom"
      key="HIGH"
    >
      <div
        className="hotspot-risk-header little-spacer-left spacer-top spacer-bottom"
      >
        <span>
          hotspots.risk_exposure
          :
        </span>
        <div
          className="hotspot-risk-badge spacer-left HIGH"
        >
          risk_exposure.HIGH
        </div>
      </div>
      <ul>
        <li
          className="spacer-bottom"
          key="cat1"
        >
          <HotspotCategory
            categoryKey="cat1"
            hotspots={
              [
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h2",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat1",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "HIGH",
                },
              ]
            }
            isLastAndIncomplete={false}
            onHotspotClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            onToggleExpand={[Function]}
            selectedHotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            title="cat1"
          />
        </li>
        <li
          className="spacer-bottom"
          key="cat2"
        >
          <HotspotCategory
            categoryKey="cat2"
            hotspots={
              [
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h1",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat2",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "HIGH",
                },
              ]
            }
            isLastAndIncomplete={false}
            onHotspotClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            onToggleExpand={[Function]}
            selectedHotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            title="cat2"
          />
        </li>
      </ul>
    </li>
    <li
      className="big-spacer-bottom"
      key="MEDIUM"
    >
      <div
        className="hotspot-risk-header little-spacer-left spacer-top spacer-bottom"
      >
        <span>
          hotspots.risk_exposure
          :
        </span>
        <div
          className="hotspot-risk-badge spacer-left MEDIUM"
        >
          risk_exposure.MEDIUM
        </div>
      </div>
      <ul>
        <li
          className="spacer-bottom"
          key="cat1"
        >
          <HotspotCategory
            categoryKey="cat1"
            hotspots={
              [
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h3",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat1",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "MEDIUM",
                },
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h4",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat1",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "MEDIUM",
                },
              ]
            }
            isLastAndIncomplete={false}
            onHotspotClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            onToggleExpand={[Function]}
            selectedHotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            title="cat1"
          />
        </li>
        <li
          className="spacer-bottom"
          key="cat2"
        >
          <HotspotCategory
            categoryKey="cat2"
            hotspots={
              [
                {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h5",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "cat2",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "MEDIUM",
                },
              ]
            }
            isLastAndIncomplete={true}
            onHotspotClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            onToggleExpand={[Function]}
            selectedHotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            title="cat2"
          />
        </li>
      </ul>
    </li>
  </ul>
  <ListFooter
    count={5}
    loadMore={[MockFunction]}
    loading={false}
    total={7}
  />
</div>
`;
